# omnishare

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  README.ru.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: publish.yml
app/: cleanup.py  config.py  database.py  env_file.py  main.py  models.py  network.py  schemas.py  security.py
app/core/: config.py  env_file.py  network.py  security.py  storage.py
app/db/: models.py  session.py
app/routers/: auth.py  download.py  files.py  settings.py  users.py
app/services/: bootstrap.py  cleanup.py  quota.py  uploads.py
scripts/: create_admin.py  reset_admin_password.py
