[project]
name = "hshare"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiosqlite==0.20.0",
    "bcrypt==4.0.1",
    "fastapi==0.115.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.5.2",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "sqlalchemy[asyncio]==2.0.35",
    "uvicorn[standard]==0.30.6",
]
