[project]
name = "omnishare"
version = "0.1.0"
description = "Self-hosted sharing service"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "aiosqlite==0.22.1",
    "bcrypt==5.0.0",
    "fastapi==0.139.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.14.2",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.32",
    "sqlalchemy[asyncio]==2.0.51",
    "uvicorn[standard]==0.49.0",
]
